# ParticleLife

./: Cargo.toml
src/: camera.rs  chunking.rs  main.rs  physics.rs  simulation.rs
src/entity/: mod.rs  particle.rs
src/resources/: actions.rs  chunks.rs  mod.rs  rules.rs  settings.rs
