[package]
name = "ParticleLife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
bevy_rapier2d = {version = "0.20.0", features = ["parallel"]}
rand = "0.8.5"
leafwing-input-manager = "0.8.0"
rayon = "1.6.1"
iyes_loopless = "0.9"

[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1